images names corrected

--- a/index.html
+++ b/index.html
@@ -22,25 +22,25 @@
             <div class="sidebar-items">
                 <a href="#" class="sidebar-item">
                     <div class="si-img-box">
-                        <img src="assets/images/skill (3).png" alt="">
+                        <img src="assets/images/skills.png" alt="">
                     </div>
                     <h4 class="si-name active">Skills</h4>
                 </a>
                 <a href="#" class="sidebar-item">
                     <div class="si-img-box">
-                        <img src="assets/images/presentation (2).png" alt="">
+                        <img src="assets/images/courses.png" alt="">
                     </div>
                     <h4 class="si-name">Courses</h4>
                 </a>
                 <a href="#" class="sidebar-item">
                     <div class="si-img-box">
-                        <img src="assets/images/check-out.png" alt="">
+                        <img src="assets/images/upcoming.png" alt="">
                     </div>
                     <h4 class="si-name">Upcoming</h4>
                 </a>
                 <a href="#" class="sidebar-item">
                     <div class="si-img-box">
-                        <img src="assets/images/book (3).png" alt="">
+                        <img src="assets/images/library.png" alt="">
                     </div>
                     <h4 class="si-name">Library</h4>
                 </a>
@@ -61,7 +61,7 @@
                     </div>
                     <div class="skill-detail">
                         <h2 class="skill-title">Reading</h2>
-                        <p>21 Days</p>
+                        <p>211 Days</p>
                         <div class="skill-progress">
                             <div class="progress progress-1"></div>
                         </div>
@@ -76,7 +76,7 @@
                     </div>
                     <div class="skill-detail">
                         <h2 class="skill-title">Writing</h2>
-                        <p>21 Days</p>
+                        <p>114 Days</p>
                         <div class="skill-progress">
                             <div class="progress progress-2"></div>
                         </div>
@@ -87,11 +87,11 @@
             <div class="skill">
                 <div class="skill-content">
                     <div class="skill-img-box">
-                        <img src="assets/images/air.png" alt="">
+                        <img src="assets/images/speaking.png" alt="">
                     </div>
                     <div class="skill-detail">
                         <h2 class="skill-title">Speaking</h2>
-                        <p>21 Days</p>
+                        <p>371 Days</p>
                         <div class="skill-progress">
                             <div class="progress progress-3"></div>
                         </div>
@@ -104,6 +104,7 @@
     </div>
     <div class="circle-1"></div>
     <div class="circle-2"></div>
+    <div class="circle-3"></div>
 </body>
 
 </html>
